# wallrift-karmveer

./: CMakeLists.txt  README.md
include/: app.h  egl.h  file.h  gl.h  monitor.h  wayland.h
shaders/: wallpaper.vert
src/: cli.c  daemon.c  file.c  gl.c  main.c  wayland.c
